--- a/application/views/scripts/utilisateurs/index.phtml
+++ b/application/views/scripts/utilisateurs/index.phtml
@@ -27,15 +27,15 @@
 		    	<div class="block-left block-top">
 				    <?php
 						
-						echo "<a href=".$this->url(array('controller' => 'utilisateurs', 'action' => 'listeutilisateurs'), 'default', true).">Liste des utilisateurs</a><br />";			
-				        echo "<a href='utilisateurs/listeutilisateurs?id=2'>Liste des formateurs</a>";
+						echo "<a href='liste-des-utilisateurs'>Liste des utilisateurs</a><br />";			
+				        echo "<a href='liste-des-utilisateurs?id=2'>Liste des formateurs</a>";
 					?>
 				</div>
 				<div class="block-right block-top">
 					<?php
-				        echo "<a href='utilisateurs/listeutilisateurs?id=1'>Liste des administrateurs</a><br />";
+				        echo "<a href='liste-des-utilisateurs?id=1'>Liste des administrateurs</a><br />";
 				        
-				        echo "<a href='utilisateurs/formateuravalider'>Formateurs à valider</a>";
+				        echo "<a href='formateurs-à-valider'>Formateurs à valider</a>";
 				    }
 				    ?>
 		    </div>
