--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -40,5 +40,17 @@ $this->placeholder('sidebar')->captureStart()?>
 			}
 		?>
 	</div> <!-- col-droite-profil -->
+	<!--
+<div id="col-bas">
+		<h2 class="crayon article-titre-7 titre">Liens divers</h2>
+			<div class="crayon article-texte-7 texte"><p>Lorem ipsum dolor site amet.</p>
+				<ul class="spip"><li><a href="#" class='spip_ancre'>Lien n&#176;1</a></li><li><a href="#" class='spip_ancre'>Lien n&#176;2</a></li><li><a href="#" class='spip_ancre'>Lien n&#176;3</a></li></ul></div>
+
+				<h2 class="crayon article-titre-8 titre">Easylia recrute</h2>
+				<div class="crayon article-texte-8 texte"><p>Vous êtes passionné d&#8217;informatique&nbsp;? <br />Vous souhaitez transmettre votre savoir&nbsp;? Devenez formateur chez Easylia&nbsp;!</p></div>
+
+				</div>
+			</div>
+	</div> <!-- col-bas -->
 </div> <!-- sidebar -->
 <?php $this->placeholder('sidebar')->captureEnd() ?>
