--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -261,7 +261,7 @@ html .fc,
 .fc-event {
 	border-style: solid;
 	border-width: 0;
-	font-size: .85em;
+	font-size: 1em;
 	cursor: default;
 	}
 	
@@ -577,7 +577,7 @@ table.fc-border-separate {
 	
 .fc-event-vert .fc-event-time {
 	white-space: nowrap;
-	font-size: 10px;
+	font-size: 0.75em;
 	}
 	
 .fc-event-vert .fc-event-bg { /* makes the event lighter w/ a semi-transparent overlay  */
@@ -605,7 +605,7 @@ table.fc-border-separate {
 	height: 8px      !important;
 	overflow: hidden !important;
 	line-height: 8px !important;
-	font-size: 11px  !important;
+	font-size: 0.75em  !important;
 	font-family: monospace;
 	text-align: center;
 	cursor: s-resize;
